Little fix and adding tests for the route module

--- a/webham_router/webham_router.routing.yml
+++ b/webham_router/webham_router.routing.yml
@@ -4,4 +4,4 @@ webham_router.testpagenew:
   _controller: '\Drupal\webham_router\Controller\TestController::test'
   _title: 'Test page for routing'
  requirements:
-  _permission: 'accesss content'
+  _permission: 'access content'
