Webham form extra validation cleaned and tested

--- a/webham_formvalidation/webham_formvalidation.info.yml
+++ b/webham_formvalidation/webham_formvalidation.info.yml
@@ -3,4 +3,4 @@ type: module
 description: Example node validation - title - number
 package: Webham
 core: 8.x
-project: 'webham_form_validation'
+project: 'webham_formvalidation'
